--- a/wonjun/pre_newcsv.ipynb
+++ b/wonjun/pre_newcsv.ipynb
@@ -890,12 +890,12 @@
     "tags": []
    },
    "source": [
-    "# train에서 2개만 평가한 유저의 평가 데이터를 삭제"
+    "# train에서 n개만 평가한 유저의 평가 데이터를 삭제"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 416,
    "id": "8fa325ae-edc1-4d30-a33b-335b88cab250",
    "metadata": {},
    "outputs": [],
@@ -905,13 +905,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 417,
    "id": "5a076dae-dc68-4e89-982c-f57ecd9822c6",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1030,7 +1026,7 @@
        "[306795 rows x 3 columns]"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 418,
    "id": "fdab7f68-4056-4200-a082-de840b9eb0d8",
    "metadata": {
     "tags": []
@@ -1088,21 +1084,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>210926</td>\n",
-       "      <td>0002005018</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>219008</td>\n",
        "      <td>0002005018</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>263325</td>\n",
        "      <td>0002005018</td>\n",
        "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2954</td>\n",
+       "      <td>0060973129</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1111,58 +1107,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>256433</th>\n",
+       "      <th>225508</th>\n",
        "      <td>278843</td>\n",
        "      <td>0743525493</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>256434</th>\n",
+       "      <th>225509</th>\n",
        "      <td>278851</td>\n",
        "      <td>067161746X</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>256435</th>\n",
+       "      <th>225510</th>\n",
        "      <td>278851</td>\n",
        "      <td>0884159221</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>256436</th>\n",
+       "      <th>225511</th>\n",
        "      <td>278851</td>\n",
        "      <td>0912333022</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>256437</th>\n",
+       "      <th>225512</th>\n",
        "      <td>278851</td>\n",
        "      <td>1569661057</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>256438 rows × 3 columns</p>\n",
+       "<p>225513 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        user_id        isbn  rating\n",
        "0             8  0002005018       4\n",
        "1         67544  0002005018       7\n",
-       "2        210926  0002005018       9\n",
-       "3        219008  0002005018       7\n",
-       "4        263325  0002005018       5\n",
+       "2        219008  0002005018       7\n",
+       "3        263325  0002005018       5\n",
+       "4          2954  0060973129       8\n",
        "...         ...         ...     ...\n",
-       "256433   278843  0743525493       7\n",
-       "256434   278851  067161746X       6\n",
-       "256435   278851  0884159221       7\n",
-       "256436   278851  0912333022       7\n",
-       "256437   278851  1569661057      10\n",
+       "225508   278843  0743525493       7\n",
+       "225509   278851  067161746X       6\n",
+       "225510   278851  0884159221       7\n",
+       "225511   278851  0912333022       7\n",
+       "225512   278851  1569661057      10\n",
        "\n",
-       "[256438 rows x 3 columns]"
+       "[225513 rows x 3 columns]"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 418,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,19 +1167,19 @@
     "user_count = train.groupby('user_id').count()['isbn'].to_dict() # user_id 항목별로 묶을 건데, isbn의 수를 세자 즉, 한 유저가 평가한 isbn 수?\n",
     "for i in range(len(train)):\n",
     "    train.at[i, 'count'] = user_count[train['user_id'][i]] # at은 row이름, column 이름으로 해당 데이터에 접근, train에 count라는 값이 생김\n",
-    "train = train[train['count']>2].reset_index(drop=True)\n",
+    "train = train[train['count']>5].reset_index(drop=True)\n",
     "train = train.drop(\"count\", axis=1)\n",
     "train # 272178 x 3 그니까 306795에서 3만개가 줄었음 1개만 평가한 놈들 삭제"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 419,
    "id": "0d971595-034c-4efe-b531-ad3b64d14ed2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('./data/train_pppp.csv', index=False) # train 내보내기"
+    "train.to_csv('./data/train_pppppp.csv', index=False) # train 내보내기"
    ]
   },
   {
