--- a/wonjun/pre_newcsv.ipynb
+++ b/wonjun/pre_newcsv.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 471,
    "id": "8fe66c37-6a4c-47c1-a9e9-cd5fa232f8bd",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 472,
    "id": "08db8ca8-c4e8-4e42-95b1-928626c56445",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 473,
    "id": "53cddf20-1d2c-46d7-91c4-8b8661be799a",
    "metadata": {
     "collapsed": true,
@@ -174,7 +174,7 @@
        "[68092 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 473,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 474,
    "id": "867efd84-207e-4603-88a8-170818e77c70",
    "metadata": {
     "collapsed": true,
@@ -446,7 +446,7 @@
        "[149570 rows x 10 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 474,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4664,6 +4664,10 @@
    "execution_count": 457,
    "id": "35bef2fa-6278-4c19-b234-d6d3f9482d68",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
