--- a/wonjun/pre_newcsv.ipynb
+++ b/wonjun/pre_newcsv.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 475,
    "id": "5a076dae-dc68-4e89-982c-f57ecd9822c6",
    "metadata": {
     "tags": []
@@ -1026,7 +1026,7 @@
        "[306795 rows x 3 columns]"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 475,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 477,
    "id": "fdab7f68-4056-4200-a082-de840b9eb0d8",
    "metadata": {
     "tags": []
@@ -1084,21 +1084,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>210926</td>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>219008</td>\n",
        "      <td>0002005018</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>263325</td>\n",
        "      <td>0002005018</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2954</td>\n",
-       "      <td>0060973129</td>\n",
-       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1107,58 +1107,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225508</th>\n",
+       "      <th>256433</th>\n",
        "      <td>278843</td>\n",
        "      <td>0743525493</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225509</th>\n",
+       "      <th>256434</th>\n",
        "      <td>278851</td>\n",
        "      <td>067161746X</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225510</th>\n",
+       "      <th>256435</th>\n",
        "      <td>278851</td>\n",
        "      <td>0884159221</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225511</th>\n",
+       "      <th>256436</th>\n",
        "      <td>278851</td>\n",
        "      <td>0912333022</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225512</th>\n",
+       "      <th>256437</th>\n",
        "      <td>278851</td>\n",
        "      <td>1569661057</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>225513 rows × 3 columns</p>\n",
+       "<p>256438 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        user_id        isbn  rating\n",
        "0             8  0002005018       4\n",
        "1         67544  0002005018       7\n",
-       "2        219008  0002005018       7\n",
-       "3        263325  0002005018       5\n",
-       "4          2954  0060973129       8\n",
+       "2        210926  0002005018       9\n",
+       "3        219008  0002005018       7\n",
+       "4        263325  0002005018       5\n",
        "...         ...         ...     ...\n",
-       "225508   278843  0743525493       7\n",
-       "225509   278851  067161746X       6\n",
-       "225510   278851  0884159221       7\n",
-       "225511   278851  0912333022       7\n",
-       "225512   278851  1569661057      10\n",
+       "256433   278843  0743525493       7\n",
+       "256434   278851  067161746X       6\n",
+       "256435   278851  0884159221       7\n",
+       "256436   278851  0912333022       7\n",
+       "256437   278851  1569661057      10\n",
        "\n",
-       "[225513 rows x 3 columns]"
+       "[256438 rows x 3 columns]"
       ]
      },
-     "execution_count": 418,
+     "execution_count": 477,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,19 +1167,162 @@
     "user_count = train.groupby('user_id').count()['isbn'].to_dict() # user_id 항목별로 묶을 건데, isbn의 수를 세자 즉, 한 유저가 평가한 isbn 수?\n",
     "for i in range(len(train)):\n",
     "    train.at[i, 'count'] = user_count[train['user_id'][i]] # at은 row이름, column 이름으로 해당 데이터에 접근, train에 count라는 값이 생김\n",
-    "train = train[train['count']>5].reset_index(drop=True)\n",
+    "train = train[train['count']>2].reset_index(drop=True)\n",
     "train = train.drop(\"count\", axis=1)\n",
     "train # 272178 x 3 그니까 306795에서 3만개가 줄었음 1개만 평가한 놈들 삭제"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
-   "id": "0d971595-034c-4efe-b531-ad3b64d14ed2",
+   "execution_count": 483,
+   "id": "cb538607-c7dd-4637-ac50-c093b85e4bd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('./data/train_pppppp.csv', index=False) # train 내보내기"
+    "user_count = train.groupby('user_id').count()['isbn'].to_dict() \n",
+    "train = train[train['user_id'] != 98391]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 484,
+   "id": "b3e5fa35-ee43-4bd6-8393-ae6a30941c48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>isbn</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67544</td>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>210926</td>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>219008</td>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>263325</td>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256433</th>\n",
+       "      <td>278843</td>\n",
+       "      <td>0743525493</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256434</th>\n",
+       "      <td>278851</td>\n",
+       "      <td>067161746X</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256435</th>\n",
+       "      <td>278851</td>\n",
+       "      <td>0884159221</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256436</th>\n",
+       "      <td>278851</td>\n",
+       "      <td>0912333022</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256437</th>\n",
+       "      <td>278851</td>\n",
+       "      <td>1569661057</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>251878 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user_id        isbn  rating\n",
+       "0             8  0002005018       4\n",
+       "1         67544  0002005018       7\n",
+       "2        210926  0002005018       9\n",
+       "3        219008  0002005018       7\n",
+       "4        263325  0002005018       5\n",
+       "...         ...         ...     ...\n",
+       "256433   278843  0743525493       7\n",
+       "256434   278851  067161746X       6\n",
+       "256435   278851  0884159221       7\n",
+       "256436   278851  0912333022       7\n",
+       "256437   278851  1569661057      10\n",
+       "\n",
+       "[251878 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 484,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 485,
+   "id": "0d971595-034c-4efe-b531-ad3b64d14ed2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "train.to_csv('./data/train_1102.csv', index=False) # train 내보내기"
    ]
   },
   {
